--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+### 0.1.0-pre2
+
+  * complete rewrite of data-store
+  * incompatible api with 0.0.x
+
 ### 0.0.8
 
   * adding push-only features to datastore sync
